# fruits_crud

./: .env.example  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
api/fruits/: __init__.py  crud.py  schemas.py  views.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  start.sh
backend/api/: __init__.py
backend/api/fruits/: crud.py  dependencies.py  schemas.py  views.py
backend/core/: cache.py  config.py  database.py
backend/core/models/: fruits.py  mixins.py
backend/migrations/: env.py
backend/migrations/versions/: 1ea88f5b328b_.py
backend/models/: base.py  fruits.py
backend/repositories/: cache.py  fruits.py
backend/reqs/: requirements.txt
backend/schemas/fruits/: base.py  fruits.py
backend/services/: fruits.py
backend/utils/: create_fastapi_app.py  openapi.py  repository.py
bot/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
bot/core/: settings.py
bot/reqs/: requirements.txt
bot/routers/: __init__.py
bot/routers/callbacks/: __init__.py  start_help.py
bot/routers/fruits/: __init__.py  states.py
bot/routers/fruits/commands/: create_fruit.py  delete_fruit.py  full_update_fruit.py  get_all_fruits.py  get_first_fruits.py  partial_update_fruit.py  search_fruits.py
bot/routers/main/: __init__.py
bot/routers/main/commands/: help.py  start.py
bot/utils/keyboards/: yes_or_no.py
bot/utils/outputs/: fruit_one.py  fruits_list.py  help.py
bot/utils/requests/: fruits.py
core/models/: __init__.py
extras/: Fruits_crud.fig
