[tool.poetry]
name = "fruits-api"
version = "1.1.0"
description = "An application that implements CRUD operations on fruits"
authors = ["filin121666"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
fastapi = "^0.112.2"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"
orjson = "^3.10.7"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
