[tool.poetry]
name = "fruits-bot"
version = "1.1.0"
description = ""
authors = ["filin121666"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
aiogram = "^3.12.0"
pydantic-settings = "^2.4.0"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
